tests/sksl/errors/MeshFragmentWithColorFilter.stage
### Compilation failed:

error: 6: effects are not permitted in custom mesh shaders
uniform colorFilter myColorFilter;
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
1 error
